# MyMPI_Event_Simulator_Project

./: CMakeLists.txt  README.MD  build.sh  build_and_run.sh  run.sh
lib/: event_simulator.hpp  event_types.hpp  my_mpi.hpp  processor.hpp  utils.hpp
src/: event_simulator.cpp  main.cpp  my_mpi.cpp  processor.cpp
